samples/_failures_safe/1761471846_814963_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e35375b3.c: In function ‘main’:
./samples/SAFE/__tmp_e35375b3.c:126:16: error: missing terminating " character
  126 |         printf("%s
      |                ^~~
./samples/SAFE/__tmp_e35375b3.c:126:9: error: expected expression at end of input
  126 |         printf("%s
      |         ^~~~~~
./samples/SAFE/__tmp_e35375b3.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e35375b3.c:126:9: error: expected declaration or statement at end of input
